--- a/hospital-common/service-util/pom.xml
+++ b/hospital-common/service-util/pom.xml
@@ -30,5 +30,9 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
