--- a/hospital-service/appointment-service/src/main/resources/application.yml
+++ b/hospital-service/appointment-service/src/main/resources/application.yml
@@ -47,6 +47,7 @@ spring:
 mybatis-plus:
   # 默认路径
   mapper-locations: classpath*:/mapper/**/*.xml
-# 设置日志级别
 logging:
-  level: debug
+  # 设置日志级别
+  level:
+    root: info
