--- a/hospital-service/common-service/src/main/resources/application.yml
+++ b/hospital-service/common-service/src/main/resources/application.yml
@@ -19,3 +19,17 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  # Redis
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
+    timeout: 1800000
+    redis
+    lettuce:
+      pool:
+        max-active: 20
+        max-wait: -1
+        # 最大阻塞等待时间,负数表示没有限制
+        max-idle: 5
+        min-idle: 0
