--- a/hospital-feign/common-feign/pom.xml
+++ b/hospital-feign/common-feign/pom.xml
@@ -12,6 +12,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>common-feign</name>
     <description>Common Feign project for Spring Boot</description>
+    <packaging>jar</packaging>
     <dependencies>
 
     </dependencies>
