--- a/hospital-feign/pom.xml
+++ b/hospital-feign/pom.xml
@@ -19,6 +19,19 @@
     <description>Hospital Feign project for Spring Boot</description>
     <packaging>pom</packaging>
     <dependencies>
-
+        <dependency>
+            <groupId>com.maxt.system.hospital.common</groupId>
+            <artifactId>common-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--服务调用feign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 </project>
