排班管理与网关

--- a/hospital-gateway/pom.xml
+++ b/hospital-gateway/pom.xml
@@ -13,6 +13,18 @@
     <name>hospital-gateway</name>
     <description>Hospital Gateway project for Spring Boot</description>
     <dependencies>
-
+        <dependency>
+            <groupId>com.maxt.system.hospital.common</groupId>
+            <artifactId>common-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
     </dependencies>
 </project>
