--- a/hospital-gateway/src/main/resources/application.properties
+++ b/hospital-gateway/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# 服务端口
+server.port=80
+# 服务名
+spring.application.name=hospital-gateway
+# nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+# 使用服务发现路由
+spring.cloud.gateway.discovery.locator.enabled=true
+# 设置路由id
+spring.cloud.gateway.routes[0].id=hospital-service
+# 设置路由的uri
+spring.cloud.gateway.routes[0].uri=lb://hospital-service
+# 设置路由断言，代理serviceId为auth-service的/auth/路径
+spring.cloud.gateway.routes[0].predicates=Path=/*/hospital/**
 
+# 设置路由id
+spring.cloud.gateway.routes[1].id=hospital-common
+# 设置路由的uri
+spring.cloud.gateway.routes[1].uri=lb://hospital-common
+# 设置路由断言，代理serviceId为auth-service的/auth/路径
+spring.cloud.gateway.routes[1].predicates=Path=/*/common/**
